syntax = "proto2";
package azurlane.p15_pb;
option go_package = "github/flyqie/blhx_server/pkg/model/blhx_game_proto/p15_pb";

message sc_15001 {
  repeated iteminfo item_list = 1;
}

message cs_15002 {
  required uint32 id = 1;
  required uint32 count = 2;
}

message sc_15003 {
  required uint32 result = 1;
  repeated dropinfo drop_list = 2;
}

message cs_15004 {
  required uint32 id = 1;
  required uint32 count = 2;
}

message sc_15005 {
  required uint32 result = 1;
}

message cs_15006 {
  required uint32 id = 1;
  required uint32 num = 2;
}

message sc_15007 {
  required uint32 result = 1;
}

message iteminfo {
  required uint32 id = 1;
  required uint32 count = 2;
}

message dropinfo {
  required uint32 type = 1;
  required uint32 id = 2;
  required uint32 number = 3;
}
